# orienter-experiment

./: .gitignore  CLAUDE.md  Pipfile  orienter.py
hybrid_orienter/: __init__.py  config.py  device.py  estimator.py  hough.py  orienter.py  preprocessing.py  rotation.py  surya_prior.py
hybrid_orienter/detector/: __init__.py  heatmap.py  polygon.py  pretrained.py  processor.py  s3.py  schema.py  settings.py
hybrid_orienter/detector/model/: config.py  encoderdecoder.py
orienter_module/: pyproject.toml
orienter_module/orienter/: __init__.py  config.py  device.py  estimator.py  hough.py  orienter.py  preprocessing.py  rotation.py
orienter_module/orienter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paddle_det_orienter/: __init__.py  config.py  detector.py  estimator.py  hough.py  orienter.py  postprocess.py  preprocessing.py  rotation.py  schema.py  text_angle_prior.py
